# ChangeLog for sys-fs/cryptsetup
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/cryptsetup/ChangeLog,v 1.98 2010/12/29 15:54:25 vapier Exp $

*cryptsetup-1.2.0 (29 Dec 2010)

  29 Dec 2010; Mike Frysinger <vapier@gentoo.org> +cryptsetup-1.2.0.ebuild:
  Version bump #349962 by ScytheMan.

  29 Oct 2010; Jeroen Roovers <jer@gentoo.org> cryptsetup-1.1.2.ebuild:
  Stable for HPPA (bug #327689).

  06 Oct 2010; Mike Frysinger <vapier@gentoo.org>
  files/1.1.3-dm-crypt-start.sh:
  Do not warn about global options #329437 by Marcin Mirosław.

*cryptsetup-1.1.3-r1 (30 Sep 2010)

  30 Sep 2010; Mike Frysinger <vapier@gentoo.org>
  +files/1.1.3-dm-crypt-start.sh, +cryptsetup-1.1.3-r1.ebuild,
  +files/1.1.3-dm-crypt-stop.sh:
  Update by Wolfram to let the init.d scripts be multiplexed #338876.

  28 Aug 2010; Raúl Porcel <armin76@gentoo.org> cryptsetup-1.1.2.ebuild:
  ia64/s390/sh/sparc stable wrt #327689

  28 Aug 2010; Markus Meier <maekke@gentoo.org> cryptsetup-1.1.2.ebuild:
  arm stable, bug #327689

  13 Aug 2010; Joseph Jezak <josejx@gentoo.org> cryptsetup-1.1.2.ebuild:
  Marked ppc/ppc64 stable for bug #327689.

  31 Jul 2010; Tobias Klausmann <klausman@gentoo.org>
  cryptsetup-1.1.2.ebuild:
  Stable on alpha, bug #327689

  27 Jul 2010; Robin H. Johnson <robbat2@gentoo.org>
  -cryptsetup-1.0.5-r1.ebuild, -cryptsetup-1.0.7.ebuild,
  -cryptsetup-1.0.7-r1.ebuild, -cryptsetup-1.1.0.ebuild,
  -cryptsetup-1.1.1_rc1.ebuild, -cryptsetup-1.1.1_rc2.ebuild,
  -cryptsetup-1.1.1.ebuild:
  Cleanup old versions.

  27 Jul 2010; Robin H. Johnson <robbat2@gentoo.org>
  cryptsetup-1.1.2.ebuild, cryptsetup-1.1.3.ebuild:
  Bug #329991: Document that users of plain (non-LUKS) volumes from the 1.0
  series MUST specify the cipher/keysize/hash, as the defaults have changed
  for security reasons.

  27 Jul 2010; Pacho Ramos <pacho@gentoo.org> cryptsetup-1.1.2.ebuild:
  amd64 stable, bug 327689
