@@ -18,13 +18,13 @@ EBUILD cryptsetup-1.0.6-r2.ebuild 3150 RMD160 997496f32ffb972a4d21efb80cb0ccedf2
 EBUILD cryptsetup-1.1.2.ebuild 3382 RMD160 c737fb8fb63a11c15c1af86db25fafc8a32e152a SHA1 4cc2311e92c429d519d99c126434b4e2ca6375cf SHA256 6445f68c8a2f1497a771cc07466f0ee6a0b23cdeb257c7db2899a1f7b247d452
 EBUILD cryptsetup-1.1.3-r1.ebuild 3153 RMD160 85b5644a340943d6a3c35698ea16c4852ab1220b SHA1 995b80ae8fca61d0fac9cba0fe78afba405505b4 SHA256 041645e8c23e7f0f5defbcb38f3de8da8467561c63b0adb269cbddfabc8aa936
 EBUILD cryptsetup-1.1.3.ebuild 3397 RMD160 40eab87e9d566cf807d7d7c1d274cb82a3f19812 SHA1 0bcbb75cf10c9221432b8aae34d67993bbe74ea3 SHA256 1270c0f6df14ffb46cb97760863743160ae1520e18c133a2969661e9a3b1d1e4
-EBUILD cryptsetup-1.2.0.ebuild 3150 RMD160 9d9295684bda792db462582bf1122fa4eead29de SHA1 877f651473b65d29612baf22d313510a5b32f96b SHA256 660f1a06af2e89f3b8fce5cb41a22772030c9a3bd0c785f0549c9da8580914fd
-MISC ChangeLog 14188 RMD160 90c5e5bbae4c28e6cbe9df809c0a16ca3dd162a7 SHA1 e4ee113f3e501ec0a11badbbfe7cc56322ea2ef2 SHA256 20ba0ae17821c7c699c4da4010c2a88d1fa4c91db4ca9a1c7316fbd835c01b3c
+EBUILD cryptsetup-1.2.0-r1.ebuild 3047 RMD160 e7afc312455d79fa1bd0d254c2b907743d9299d3 SHA1 6509ff5fcc04e9630de70e4552cd9c52cb615798 SHA256 ce0c6ab67b3b476c38e85ea19cd6bcd82bba5fc9586a4d61f6993aaf8234853b
+MISC ChangeLog 14406 RMD160 6d7e829d9e99dcf96f9b669ebff5ed3e2ca8756a SHA1 5d3b2523c16f24b504baf1efa1158e86e5e2cdfd SHA256 1f845cfde2c72183b8750e1477b22b9a43699f60a0f67e7199547ea87ef24d7b
 MISC metadata.xml 239 RMD160 81512c49e64b6e70c7b746ba09d3e6fce4c7bc89 SHA1 c4085a72e46fe6bcea5bdff780007791eae6db4b SHA256 aebd5282fb892100f348eba1ed27edd27e7296356897c6f5314674f8abb4b51a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAk0bWZ0ACgkQaC/OocHi7JYjFAD+N+/4xT6O7Sy9lpwXpsgfaO3a
-tvR3oF4VHbk2KioACe8A+gIz9wxiEeqk9rav3Jqi6hhlXGH58fWjGay4GFdbrLjl
-=yW5g
+iF4EAREIAAYFAk0cvSsACgkQaC/OocHi7JaC3gEAhMEHWHj1VcIVUJzKU+VQa8XF
+L55oNHTtVTPvyHMG+XwA/3Cm13EK9YmNGIpxmUFdQkb5JAQpUWm8atjEZDPp21vT
+=/97E
 -----END PGP SIGNATURE-----
