@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/cryptsetup
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/cryptsetup/ChangeLog,v 1.98 2010/12/29 15:54:25 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/cryptsetup/ChangeLog,v 1.99 2010/12/30 17:11:29 vapier Exp $
+
+*cryptsetup-1.2.0-r1 (30 Dec 2010)
+
+  30 Dec 2010; Mike Frysinger <vapier@gentoo.org> -cryptsetup-1.2.0.ebuild,
+  +cryptsetup-1.2.0-r1.ebuild:
+  Convert to IUSE=+static and make it work again #350105 by Casey Carter.
 
 *cryptsetup-1.2.0 (29 Dec 2010)
 
